<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:drawableLeft="@drawable/ic_info_outline_black_24dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:textStyle="bold"
        />
    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text=""
        android:drawableLeft="@drawable/ic_place_black_24dp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="8dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Trip Type"
        android:textStyle="bold"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/city_break"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sea_side"
            android:layout_weight="1"
            />
        <RadioButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mountains"
            android:layout_weight="1"
            />
    </RadioGroup>
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"/>
    <SeekBar
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <TextView
            android:layout_width="0dp"
            android:layout_marginRight="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_date"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/end_date"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">
        <Button
            android:id="@+id/startDateButton"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:onClick="showDatePickerDialog" />
        <Button
            android:id="@+id/endDateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dd_mm_yyyy"
            android:onClick="showDatePickerDialog" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="16dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        android:textStyle="bold"
        />
    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="2.5"
        />
    <Button
        android:src="@mipmap/ic_launcher"
        android:background="#0098c3"
        android:foreground="?selectableItemBackground"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</LinearLayout>